metadata/force-app/main/default/objects/Account/fields/F__c.field-meta.xml
<CustomField>
    <fullName>F__c</fullName>
    <label>F</label>
    <length>9</length>
    <type>Text</type>
</CustomField>