metadata/force-app/main/default/objects/Account/fields/SBQQ__CoTerminationEvent__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CoTerminationEvent__c</fullName>
    <description>Determines when contracts are co-terminated.</description>
    <inlineHelpText>Determines when contracts are co-terminated ( change description here)</inlineHelpText>
    <label>Co-Termination Event</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__ContractCoTermination__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Add-on</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>